--- a/bin/install
+++ b/bin/install
@@ -14,7 +14,7 @@ ln -s ${OPENSHIFT_WILDFLY_DIR}/standalone/log ${OPENSHIFT_WILDFLY_DIR}/logs
 shopt -s dotglob
 cp -r ${OPENSHIFT_WILDFLY_DIR}/versions/${version}/template/* ${OPENSHIFT_WILDFLY_DIR}/template
 cp -r ${OPENSHIFT_WILDFLY_DIR}/versions/${version}/template/.openshift ${OPENSHIFT_WILDFLY_DIR}/template
-cp ${OPENSHIFT_WILDFLY_DIR}/standalone/configuration/standalone.xml ${OPENSHIFT_WILDFLY_DIR}/template/.openshift/config
+cp ${OPENSHIFT_WILDFLY_DIR}/standalone/configuration/standalone.template.xml ${OPENSHIFT_WILDFLY_DIR}/template/.openshift/config/standalone.xml
 
 sed -i "s/{APP_NAME}/${OPENSHIFT_APP_NAME}/g" ${OPENSHIFT_WILDFLY_DIR}/template/pom.xml
 
