--- a/bin/install
+++ b/bin/install
@@ -1,57 +1,61 @@
 #!/bin/bash -eu
 
-source $OPENSHIFT_WILDFLY_DIR/bin/util
+source OPENSHIFT_AEROGEAR_PUSH_DIR/bin/util
 
 case "$1" in
   -v|--version)
     version="$2"
 esac
 
-echo "$version" > "$OPENSHIFT_WILDFLY_DIR/env/OPENSHIFT_WILDFLY_VERSION"
+echo "$version" > "OPENSHIFT_AEROGEAR_PUSH_DIR/env/OPENSHIFT_AEROGEAR_PUSH_VERSION"
 
-ln -s ${OPENSHIFT_WILDFLY_DIR}/standalone/log ${OPENSHIFT_WILDFLY_DIR}/logs
+ln -s ${OPENSHIFT_AEROGEAR_PUSH_DIR}/standalone/log ${OPENSHIFT_AEROGEAR_PUSH_DIR}/logs
 
-shopt -s dotglob
-cp -r ${OPENSHIFT_WILDFLY_DIR}/versions/${version}/template/* ${OPENSHIFT_WILDFLY_DIR}/template
-cp -r ${OPENSHIFT_WILDFLY_DIR}/versions/${version}/template/.openshift ${OPENSHIFT_WILDFLY_DIR}/template
-cp ${OPENSHIFT_WILDFLY_DIR}/standalone/configuration/standalone.xml ${OPENSHIFT_WILDFLY_DIR}/template/.openshift/config/standalone.xml
+# Install the UnifiedPush Server WARs (auth and core)
+cp ${OPENSHIFT_AEROGEAR_PUSH_DIR}/versions/${version}/standalone/deployments/ROOT.war $OPENSHIFT_AEROGEAR_PUSH_DIR/standalone/deployments
+cp ${OPENSHIFT_AEROGEAR_PUSH_DIR}/versions/${version}/standalone/deployments/auth-server.war $OPENSHIFT_AEROGEAR_PUSH_DIR/standalone/deployments
+cp ${OPENSHIFT_AEROGEAR_PUSH_DIR}/versions/${version}/standalone/deployments/ag-push.war $OPENSHIFT_AEROGEAR_PUSH_DIR/standalone/deployments
 
-sed -i "s/{APP_NAME}/${OPENSHIFT_APP_NAME}/g" ${OPENSHIFT_WILDFLY_DIR}/template/pom.xml
+
+###shopt -s dotglob
+###cp -r ${OPENSHIFT_AEROGEAR_PUSH_DIR}/versions/${version}/template/* ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template
+###cp -r ${OPENSHIFT_AEROGEAR_PUSH_DIR}/versions/${version}/template/.openshift ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template
+###cp ${OPENSHIFT_AEROGEAR_PUSH_DIR}/standalone/configuration/standalone.xml ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/.openshift/config/standalone.xml
+
+sed -i "s/{APP_NAME}/${OPENSHIFT_APP_NAME}/g" ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/pom.xml
 
 # Create and install the initial template WAR
-pushd $OPENSHIFT_WILDFLY_DIR/versions/${version}/template/src/main/webapp 1> /dev/null
-  jar cvf $OPENSHIFT_WILDFLY_DIR/standalone/deployments/ROOT.war ./*
+pushd OPENSHIFT_AEROGEAR_PUSH_DIR/versions/${version}/template/src/main/webapp 1> /dev/null
+  jar cvf OPENSHIFT_AEROGEAR_PUSH_DIR/standalone/deployments/ROOT.war ./*
 popd 1> /dev/null
 
-username=$(generate_username)
-password=$(generate_password)
+##username=$(generate_username)
+##password=$(generate_password)
 
-echo "$username" > $OPENSHIFT_WILDFLY_DIR/env/OPENSHIFT_WILDFLY_USERNAME
-echo "$password" > $OPENSHIFT_WILDFLY_DIR/env/OPENSHIFT_WILDFLY_PASSWORD
+##echo "$username" > OPENSHIFT_AEROGEAR_PUSH_DIR/env/OPENSHIFT_AEROGEAR_PUSH_USERNAME
+##echo "$password" > OPENSHIFT_AEROGEAR_PUSH_DIR/env/OPENSHIFT_AEROGEAR_PUSH_PASSWORD
 
-$OPENSHIFT_WILDFLY_DIR/bin/add-user.sh --user ${username} --password ${password} --silent --enable
+OPENSHIFT_AEROGEAR_PUSH_DIR/bin/add-user.sh --user ${username} --password ${password} --silent --enable
 
 client_result ""
-client_result "WildFly 8 administrator added.  Please make note of these credentials:"
+client_result "Aerogear Push Server added.  Please make note of these default credentials:"
 client_result ""
-client_result "   Username: $username"
-client_result "   Password: $password"
-client_result "   "
-client_result "   run 'rhc port-forward $OPENSHIFT_APP_NAME to access the web admin area on port 9990."
+client_result "           User: admin"
+client_result "       Password: 123"
+client_result ' Connection URL: https://$OPENSHIFT_APP_DNS/ag-push'
 client_result ""
-
 
 #JBOSS_HOME=/etc/alternatives/jbossas-$version
-#pushd $OPENSHIFT_WILDFLY_DIR 1> /dev/null
+#pushd OPENSHIFT_AEROGEAR_PUSH_DIR 1> /dev/null
 #  ln -s ${JBOSS_HOME}/jboss-modules.jar
 #  ln -s ${JBOSS_HOME}/modules
 #popd 1> /dev/null
 
-touch ${OPENSHIFT_WILDFLY_DIR}/env/OPENSHIFT_WILDFLY_CLUSTER
-#touch ${OPENSHIFT_WILDFLY_DIR}/env/OPENSHIFT_JBOSSAS_CLUSTER_REMOTING
+touch ${OPENSHIFT_AEROGEAR_PUSH_DIR}/env/OPENSHIFT_AEROGEAR_PUSH_CLUSTER
+#touch ${OPENSHIFT_AEROGEAR_PUSH_DIR}/env/OPENSHIFT_JBOSSAS_CLUSTER_REMOTING
 
 # Install Oracle JDK 8 (this should be removed once OpenShift provides support for JDK 8)
-pushd $OPENSHIFT_WILDFLY_DIR/usr/lib/jvm > /dev/null
+pushd OPENSHIFT_AEROGEAR_PUSH_DIR/usr/lib/jvm > /dev/null
     if wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-i586.tar.gz > /dev/null; then
         tar -xzf jdk-8u5-linux-i586.tar.gz
         rm jdk-8u5-linux-i586.tar.gz
@@ -59,11 +63,11 @@ pushd $OPENSHIFT_WILDFLY_DIR/usr/lib/jvm > /dev/null
     else
         # Just in case the install fails for some reason
         client_message "JDK 8 could not be installed, defaulting to JDK 7 instead"
-        mv ${OPENSHIFT_WILDFLY_DIR}/template/.openshift/markers/java8 ${OPENSHIFT_WILDFLY_DIR}/template/.openshift/markers/java7
-        sed -i "s/<maven.compiler.source>1.8<\/maven.compiler.source>/<maven.compiler.source>1.7<\/maven.compiler.source>/g" ${OPENSHIFT_WILDFLY_DIR}/template/pom.xml
-        sed -i "s/<maven.compiler.target>1.8<\/maven.compiler.target>/<maven.compiler.target>1.7<\/maven.compiler.target>/g" ${OPENSHIFT_WILDFLY_DIR}/template/pom.xml
-        sed -i '/<maven.compiler.executable>${env.OPENSHIFT_WILDFLY_DIR}usr\/lib\/jvm\/jdk1.8.0_05\/bin\/javac<\/maven.compiler.executable>/d' ${OPENSHIFT_WILDFLY_DIR}/template/pom.xml
-        sed -i '/<maven.compiler.fork>true<\/maven.compiler.fork>/d' ${OPENSHIFT_WILDFLY_DIR}/template/pom.xml
+        mv ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/.openshift/markers/java8 ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/.openshift/markers/java7
+        sed -i "s/<maven.compiler.source>1.8<\/maven.compiler.source>/<maven.compiler.source>1.7<\/maven.compiler.source>/g" ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/pom.xml
+        sed -i "s/<maven.compiler.target>1.8<\/maven.compiler.target>/<maven.compiler.target>1.7<\/maven.compiler.target>/g" ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/pom.xml
+        sed -i '/<maven.compiler.executable>${env.OPENSHIFT_AEROGEAR_PUSH_DIR}usr\/lib\/jvm\/jdk1.8.0_05\/bin\/javac<\/maven.compiler.executable>/d' ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/pom.xml
+        sed -i '/<maven.compiler.fork>true<\/maven.compiler.fork>/d' ${OPENSHIFT_AEROGEAR_PUSH_DIR}/template/pom.xml
         update-configuration java7
     fi
 popd > /dev/null
