--- a/bin/install
+++ b/bin/install
@@ -42,7 +42,7 @@ client_result "Aerogear Push Server added.  Please make note of these default cr
 client_result ""
 client_result "           User: admin"
 client_result "       Password: 123"
-client_result ' Connection URL: https://$OPENSHIFT_APP_DNS/ag-push'
+client_result " Connection URL: https://$OPENSHIFT_APP_DNS/ag-push"
 client_result ""
 
 #JBOSS_HOME=/etc/alternatives/jbossas-$version
